# chrome-use

./: .gitignore  AGENTS.md  CNAME  README.md  README.zh.md  cloud.html  commands.html  extract.html  family.html  finding.html  flake.nix  index.html  install.sh  interacting.html  llms.txt  login-auth.html  network.html  package.json  pnpm-workspace.yaml  react.html  reading.html  real-chrome.html  sessions.html  site-adapters.html  slack.html  stealth.html
.claude-plugin/: marketplace.json
.husky/: pre-commit
assets/: demo.tape
cli/: Cargo.toml  build.rs
cli/src/: account.rs  commands.rs  connect.rs  connection.rs  cookie_export.rs  error_envelope.rs  findurl.rs  flags.rs  friction.rs  install.rs  main.rs  mcp.rs  output.rs  ownership.rs  silence.rs  site.rs  skills.rs  test_runner.rs  upgrade.rs
cli/src/doctor/: chrome.rs  config.rs  daemon.rs  environment.rs  fix.rs  helpers.rs  launch.rs  mod.rs  native_host.rs  network.rs  security.rs  skill.rs  versions.rs
cli/src/native/: actions.rs  adaptive.rs  auth.rs  browser.rs  daemon.rs  e2e_tests.rs  element.rs  humanize.rs  inspect_server.rs  interaction.rs  mod.rs  network.rs  parity_tests.rs  providers.rs  relay.rs  screenshot.rs  script.rs  script_js.rs  slider.rs  snapshot.rs  state.rs  stealth.rs  stealth_scripts.js  tracing.rs
cli/src/native/cdp/: chrome.rs  discovery.rs  types.rs
cli/src/native/react/: scripts.rs
cli/src/native/stream/: chat.rs  dashboard.rs  http.rs
cli/src/native/test_fixtures/: hidden_upload_probe.html  iframe_button_probe.html
cli/tests/: doctor_cli.rs
docker/: docker-compose.yml
docs/: canvas.html  changelog.html  cloud.html  commands.html  compare.html  core-loop.html  debugger-banner-silence.html  electron.html  extract.html  family.html  finding.html  how-it-works.html  http-api.html  index.html  install.html  interacting.html  lineage.html  llms.txt  login-auth.html  mcp.html  media.html  network.html  privacy.html  react.html  reading.html  real-chrome.html  robots.txt  script.html  (+8 more)
(+118 files in other folders)
